[package]
name = "axfeat"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
]
description = "Top-level feature selection for Rukos"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/rukos"
repository = "https://github.com/syswonder/rukos/tree/main/api/axfeat"

[features]
default = []

# Multicore
smp = ["axhal/smp", "axruntime/smp", "spinlock/smp"]

# Floating point/SIMD
fp_simd = ["axhal/fp_simd"]

# Interrupts
irq = ["axhal/irq", "axruntime/irq", "axtask?/irq"]

# Real time clock
rtc = ["axhal/rtc", "axruntime/rtc"]

# Memory
alloc = ["axalloc", "axruntime/alloc"]
alloc-tlsf = ["axalloc/tlsf"]
alloc-slab = ["axalloc/slab"]
alloc-buddy = ["axalloc/buddy"]
paging = ["alloc", "axhal/paging", "axruntime/paging"]
tls = ["alloc", "axhal/tls", "axruntime/tls", "axtask?/tls"]

# Multi-threading and scheduler
multitask = ["alloc", "axtask/multitask", "axsync/multitask", "axruntime/multitask"]
sched_fifo = ["axtask/sched_fifo"]
sched_rr = ["axtask/sched_rr", "irq"]
sched_cfs = ["axtask/sched_cfs", "irq"]

# File system
fs = ["alloc", "paging", "dep:ruxfs", "axruntime/fs"] # TODO: try to remove "paging"
blkfs = ["ruxdriver/virtio-blk", "axruntime/blkfs"]
myfs = ["ruxfs?/myfs"]
9pfs = []

# Networking
net = ["alloc", "paging", "ruxdriver/virtio-net", "dep:axnet", "axruntime/net"]

# Display
display = ["alloc", "paging", "ruxdriver/virtio-gpu", "dep:ruxdisplay", "axruntime/display"]

# 9P
virtio-9p = ["9pfs", "ruxdriver/virtio-9p", "rux9p/virtio-9p", "axruntime/virtio-9p"]
net-9p = ["9pfs", "net", "rux9p/net-9p", "axruntime/net-9p"]

# Device drivers
bus-mmio = ["ruxdriver?/bus-mmio"]
bus-pci = ["ruxdriver?/bus-pci"]
driver-ramdisk = ["ruxdriver?/ramdisk", "ruxfs?/use-ramdisk"]
driver-ixgbe = ["ruxdriver?/ixgbe"]
driver-bcm2835-sdhci = ["ruxdriver?/bcm2835-sdhci"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]

[dependencies]
axruntime = { path = "../../modules/axruntime" }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
axalloc = { path = "../../modules/axalloc", optional = true }
ruxdriver = { path = "../../modules/ruxdriver", optional = true }
ruxfs = { path = "../../modules/ruxfs", optional = true }
rux9p = { path = "../../modules/rux9p", optional = true }
axnet = { path = "../../modules/axnet", optional = true }
ruxdisplay = { path = "../../modules/ruxdisplay", optional = true }
axsync = { path = "../../modules/axsync", optional = true }
axtask = { path = "../../modules/axtask", optional = true }
spinlock = { path = "../../crates/spinlock", optional = true }
