[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Runtime library of Rukos"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/rukos"
repository = "https://github.com/syswonder/rukos/tree/main/modules/axruntime"

[features]
default = []

smp = ["axhal/smp"]
irq = ["axhal/irq", "axtask?/irq", "percpu", "kernel_guard"]
tls = ["axhal/tls", "axtask?/tls"]
alloc = ["axalloc", "dtb"]
paging = ["axhal/paging", "lazy_init"]
rtc = ["axhal/rtc"]

multitask = ["axtask/multitask"]
fs = ["axdriver", "axfs"]
blkfs = ["fs"]
virtio-9p = ["fs", "rux9p"]
net-9p = ["fs", "rux9p"]
net = ["axdriver", "axnet"]
display = ["axdriver", "axdisplay"]
signal = []

musl = []

[dependencies]
cfg-if = "1.0"
axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
ruxconfig = { path = "../ruxconfig" }
axalloc = { path = "../axalloc", optional = true }
axdriver = { path = "../axdriver", optional = true }
axfs = { path = "../axfs", optional = true }
rux9p = { path = "../rux9p", optional = true }
axnet = { path = "../axnet", optional = true }
axdisplay = { path = "../axdisplay", optional = true }
axtask = { path = "../axtask", optional = true }

crate_interface = { path = "../../crates/crate_interface" }
percpu = { path = "../../crates/percpu", optional = true }
kernel_guard = { path = "../../crates/kernel_guard", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
dtb = { path = "../../crates/dtb", optional = true}
