[package]
name = "axlibc"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "Rukos user program library for C apps"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/syswonder/rukos"
repository = "https://github.com/syswonder/rukos/tree/main/ulib/axlibc"
documentation = "https://github.com/syswonder/rukos/axlibc/index.html"

[lib]
crate-type = ["staticlib"]

[features]
default = []

# Multicore
smp = ["rukos_posix_api/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd"]

# Memory
alloc = ["rukos_posix_api/alloc"]
tls = ["alloc", "axfeat/tls"]

# Multi-task
multitask = ["rukos_posix_api/multitask"]

# File system
fs = ["rukos_posix_api/fs", "fd"]

# Networking
net = ["rukos_posix_api/net", "fd"]

# Signal
signal = ["rukos_posix_api/signal"]

# Libc features
fd = []
pipe = ["rukos_posix_api/pipe"]
select = ["rukos_posix_api/select"]
poll = ["rukos_posix_api/poll"]
epoll = ["rukos_posix_api/epoll"]
random-hw = []

[dependencies]
axfeat = { path = "../../api/axfeat" }
rukos_posix_api = { path = "../../api/rukos_posix_api" }
axio = { path = "../../crates/axio" }
axerrno = { path = "../../crates/axerrno" }

[build-dependencies]
bindgen ={ version = "0.66" }
