[package]
name = "axmusl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[features]
default = []

# Multicore
smp = ["rukos_posix_api/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd"]

# Memory
alloc = ["rukos_posix_api/alloc"]
tls = ["alloc", "axfeat/tls"]

# Multi-task
multitask = ["rukos_posix_api/multitask"]

# File system
fs = ["rukos_posix_api/fs", "fd"]

# Networking
net = ["rukos_posix_api/net", "fd"]

# Libc features
fd = ["rukos_posix_api/fd"]
pipe = ["rukos_posix_api/pipe"]
select = ["rukos_posix_api/select"]
epoll = ["rukos_posix_api/epoll"]
poll = ["rukos_posix_api/poll"]
rtc = ["axfeat/rtc"]

musl = ["rukos_posix_api/musl", "tls"]

# Interrupts
irq = ["rukos_posix_api/irq", "axfeat/irq"]

sched_rr = ["irq", "axfeat/sched_rr"]

[dependencies]
axfeat = { path = "../../api/axfeat" }
rukos_posix_api = { path = "../../api/rukos_posix_api" }
num_enum = { version = "0.5.11", default-features = false }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
kernel_guard = { path = "../../crates/kernel_guard" }
crate_interface = { path = "../../crates/crate_interface" }
